# face_detection_and_recognition

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
face_detection_and_extraction/: README.md  detect_face_age_gender.py  detect_face_blazeface.py  detect_face_mtcnn.py  detect_face_opencv_age_gender.py  detect_face_opencv_dnn.py  detect_face_openvino.py  detect_face_yolov5_face.py  dnn_detect_face.py  extract_and_label_faces_from_dataset.py  extract_faces_from_dataset.py  extract_faces_img_dataset.py  mtcnn_detect_face.py  requirements.txt
face_detection_and_extraction/data/: count_files.sh
face_detection_and_extraction/data_extraction/: extract_and_clean_imdb_wiki_faces.py  extract_and_label_faces_from_dataset.py  extract_faces_from_dataset.py
face_detection_and_extraction/eval/: eval_face_detector.py
face_detection_and_extraction/face_age_gender_training/: export_to_onnx.py  hp-tuning.json  hp-tuning.py  hp_tuning.py  parse_config.py  test.py  train.json  train.py  utils.py
face_detection_and_extraction/face_age_gender_training/base/: base_data_loader.py
face_detection_and_extraction/face_age_gender_training/config/: hp_tuning_age.json  hp_tuning_gender.json  hp_tuning_video_clsf.json  train_age.json  train_gender.json  train_video_clsf.json
face_detection_and_extraction/face_age_gender_training/data_loader/: data_loaders.py
face_detection_and_extraction/face_age_gender_training/logger/: visualization.py
face_detection_and_extraction/face_age_gender_training/model/: loss.py  metric.py  model.py
face_detection_and_extraction/face_age_gender_training/trainer/: trainer.py
face_detection_and_extraction/face_extraction/: extract_and_clean_imdb_wiki_faces.py  extract_and_label_faces_from_dataset.py  extract_faces_from_dataset.py  extract_features_from_face_dataset.py
face_detection_and_extraction/modules/: common_utils.py
face_detection_and_extraction/modules/blazeface/: blazeface.py  model.py  onnx_export.py
face_detection_and_extraction/modules/face_detection_trt_server/: Dockerfile  build_docker.sh  inference.py  requirements.txt  restart_run_docker.sh
face_detection_and_extraction/modules/facenet_age_trt_server/: Dockerfile  build_docker.sh  inference.py  restart_run_docker.sh  triton_utils.py
face_detection_and_extraction/modules/facenet_gender_trt_server/: build_docker.sh  inference.py  restart_run_docker.sh
face_detection_and_extraction/modules/facenet_trt_server/: build_docker.sh  inference.py  restart_run_docker.sh
face_detection_and_extraction/modules/mobile_facenet/: export_to_onnx.py  mobile_facenet.py  utils.py
face_detection_and_extraction/modules/models/: base.py  inference.py
face_detection_and_extraction/modules/mtcnn/: model.py
face_detection_and_extraction/modules/opencv2_dnn/: model.py  utils.py
face_detection_and_extraction/modules/openvino/: model.py  utils.py
face_detection_and_extraction/modules/utils/: files.py  image.py  inference.py  parser.py
face_detection_and_extraction/modules/yolov5-face/onnx/: onnx_utils.py
face_detection_and_extraction/modules/yolov5-face/pytorch/: detect_face_pytorch.py
face_detection_and_extraction/modules/yolov5_face/: model.py
face_detection_and_extraction/modules/yolov5_face/onnx/: detect_face_onnx.py  export_to_onnx.py  onnx_utils.py
face_detection_and_extraction/modules/yolov5_face/pytorch/: __init__.py  detect_face_pytorch.py  export_to_onnx.py
face_detection_and_extraction/requirements/: age_gender_training.txt  blazeface.txt  common.txt  dev.txt  mobile_facenet.txt  mtcnn.txt  opencv.txt  openvino.txt  trt_server.txt  yolov5-face.txt
face_detection_and_extraction/scripts/: poetry_to_pip_requirements.py
face_detection_and_extraction/tests/: conftest.py  requirements-test.txt
face_detection_and_extraction/tests/image_tests/: test_blazeface.py  test_mtcnn.py  test_opencv_age_gender.py  test_opencv_dnn.py  test_openvino.py  test_yolov5_face.py
face_detection_and_extraction/weights/: download_weights.sh
face_detection_and_extraction/weights/blazeface/: blazefaceback.onnx
face_feat_extraction_and_filtering/: convert_h5_to_saved_model.py  filter_faces_using_reference.py  requirements.txt
similar_face_filtering/: README.md  filter_faces_using_reference.py  requirements.txt
similar_face_filtering/tests/: conftest.py  requirements-dev.txt  requirements-test.txt
similar_face_filtering/tests/base/: test_similar_faces_filter.py
(+23 files in other folders)
